fixed bug that stretched the images oddly, add bubble image

--- a/style.css
+++ b/style.css
@@ -31,9 +31,10 @@ body {
 #canvas-1 {
   outline: 2px solid purple;
   border-radius: 0.5rem;
-  width: 800px;
-  height: 500px;
+  /* width: 800px;
+  height: 500px; */
   margin: auto;
+  background-image: url(./images/water-bg-1.jpg);
 }
 
 .buttons-div {
